--- a/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
+++ b/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
@@ -1,23 +1,27 @@
 @import "../../../styles/variables";
 
 
-.article-page {
+.article {
+    padding-top: 30px;
+    display: flex;
+    flex-direction: row;
 
-    &__left {
+    .leftContainer {
+        display: flex;
+        flex-direction: column;
         padding-top: 32px;
         padding-right: 5%;
 
-        &--subtitle {
+        .subtitle {
             h4 {
                 font-size: 16px;
                 line-height: 16px;
-                padding-top: 50px;
                 color: #B9B9B9;
                 font-family: RSLight, serif;
             }
         }
 
-        &--title {
+        .title {
             h1 {
                 font-size: 24px;
                 line-height: 32px;
@@ -26,17 +30,16 @@
             }
         }
 
-        &--sources {
+        .sources {
             font-size: 14px;
             line-height: 20px;
-            padding-top: 24px;
             padding-bottom: 20px;
             color: #B9B9B9;
             display: flex;
             align-items: center;
         }
 
-        &--content {
+        .content {
 
             word-wrap: break-word;
             font-size: 14px;
@@ -50,11 +53,11 @@
         }
     }
 
-    &__right {
+    .rightContainer {
         left: 50%;
         right: 0;
         top: 10%;
         bottom: 10%;
-        height: 80vh;
+        max-height: 100vh;
     }
 }
