--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -22,6 +22,7 @@
 .footer-home {
 
 	//width: 100%;
+	//background-color: black;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
