--- a/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
+++ b/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
@@ -11,6 +11,7 @@
         flex-direction: column;
         padding-top: 32px;
         padding-right: 5%;
+        width: 70%;
 
         .subtitle {
             h4 {
