--- a/frontend/src/components/CardPreview/CardPreview.scss
+++ b/frontend/src/components/CardPreview/CardPreview.scss
@@ -14,6 +14,7 @@
         height: 210px;
     }
     .title {
+        white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
         padding: 10px 10px 25px;
