--- a/frontend/src/components/CardVerticalList/CardVerticalList.scss
+++ b/frontend/src/components/CardVerticalList/CardVerticalList.scss
@@ -19,7 +19,7 @@
         .photo {
           width: 300px;
           height: 220px;
-          //CardVerticalList width: 330
+          //CardVerticalList width: 335
           //CardVerticalList itemSize: 280
         }
       }
@@ -84,5 +84,27 @@
 @media (max-width: 830px) {
 }
 
-@media (max-width: 670px) {
+@media (min-width: 472px) and (max-width: 670px) {
+}
+
+@media (max-width: 471px) {
+  .card--verticalList__container {
+    &__item {
+      .card_preview {
+        height: 200px;
+        width: 180px;
+        .photo {
+          width: 180px;
+          height: 190px;
+          //CardVerticalList width: 220
+          //CardVerticalList itemSize: 215
+        }
+        .title {
+          text-transform: uppercase;
+          font-size: 16px;
+          line-height: 16px;
+        }
+      }
+    }
+  }
 }
