--- a/frontend/src/components/CardVerticalList/CardVerticalList.scss
+++ b/frontend/src/components/CardVerticalList/CardVerticalList.scss
@@ -11,7 +11,7 @@
   }
 }
 
-@media (min-width: 1300px) {
+@media screen and (min-width: 1300px) {
   .card--verticalList__container {
     &__item {
       .card_preview {
@@ -27,7 +27,7 @@
   }
 }
 
-@media (min-width: 1199px) and (max-width: 1299px) {
+@media screen and (min-width: 1199px) and (max-width: 1299px) {
   .card--verticalList__container {
     &__item {
       .card_preview {
@@ -45,7 +45,7 @@
 }
 
 /* Portrait tablets and medium desktops */
-@media (min-width: 992px) and (max-width: 1199px) {
+@media screen and (min-width: 992px) and (max-width: 1199px) {
   .card--verticalList__container {
     &__item {
       .card_preview {
@@ -63,7 +63,7 @@
 }
 
 /* Portrait tablets and small desktops */
-@media (min-width: 831px) and (max-width: 991px) {
+@media screen and (min-width: 831px) and (max-width: 991px) {
   .card--verticalList__container {
     &__item {
       .card_preview {
@@ -81,13 +81,13 @@
 }
 
 /* Landscape phones and portrait tablets */
-@media (max-width: 830px) {
+@media screen and (max-width: 830px) {
 }
 
-@media (min-width: 472px) and (max-width: 670px) {
+@media screen and (min-width: 472px) and (max-width: 670px) {
 }
 
-@media (max-width: 471px) {
+@media screen and (max-width: 471px) {
   .card--verticalList__container {
     &__item {
       .card_preview {
