--- a/frontend/src/components/ToolComponents/Article/ArticleSourcesMenu/ArticleSourcesMenu.scss
+++ b/frontend/src/components/ToolComponents/Article/ArticleSourcesMenu/ArticleSourcesMenu.scss
@@ -1,9 +1,18 @@
 // button
 #sources-button {
   border: none;
-  padding: 0 0 0 10px;
-  line-height: 20px;
-  font-size: 14px;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  align-items: center;
+  width: auto !important;
+  h5 {
+    text-transform: none;
+    line-height: 20px;
+    font-size: 14px;
+    color: #B9B9B9;
+  }
   &:hover {
     color: $white;
   }
@@ -18,13 +27,14 @@
 #sources-menu {
   .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
     color: $white;
-    width: 900px;
+    max-width: 1500px;
     .sources-menu_item {
       display: flex;
       flex-direction: row;
       align-items: flex-start;
       &__ref {
         a {
+          color: #B9B9B9;
           font-size: small;
           text-decoration: underline;
           &:hover {
@@ -33,6 +43,7 @@
         }
       }
       &__journal {
+        color: #B9B9B9;
         font-size: small;
         white-space: pre-wrap;
         &:hover {
@@ -51,6 +62,181 @@
           line-height: 14px;
           &:hover {
             color: $white;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  #sources-button {
+    h5 {
+      font-size: 24px;
+      line-height: 28px;
+    }
+  }
+  #sources-menu {
+    .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
+      max-width: 900px;
+      .sources-menu_item {
+        &__ref {
+          a {
+            font-size: 20px;
+            line-height: 26px;
+          }
+        }
+        &__journal {
+          font-size: 20px;
+          line-height: 26px;
+        }
+        &__title {
+          h5 {
+            font-size: 20px;
+            line-height: 26px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1300px) and (max-width: 1919px) {
+  #sources-menu {
+    .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
+      max-width: 900px;
+      .sources-menu_item {
+        &__ref {
+          a {
+          }
+        }
+        &__journal {
+        }
+        &__title {
+          h5 {
+            }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1199px) and (max-width: 1299px) {
+  #sources-menu {
+    .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
+      max-width: 860px;
+      .sources-menu_item {
+        &__ref {
+          a {
+          }
+        }
+        &__journal {
+        }
+        &__title {
+          h5 {
+          }
+        }
+      }
+    }
+  }
+}
+
+/* Portrait tablets and medium desktops */
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  #sources-menu {
+    .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
+      max-width: 650px;
+      .sources-menu_item {
+        &__ref {
+          a {
+          }
+        }
+        &__journal {
+        }
+        &__title {
+          h5 {
+          }
+        }
+      }
+    }
+  }
+}
+
+/* Portrait tablets and small desktops */
+@media screen and (min-width: 831px) and (max-width: 991px) {
+  #sources-menu {
+    .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
+      max-width: 590px;
+      .sources-menu_item {
+        &__ref {
+          a {
+          }
+        }
+        &__journal {
+        }
+        &__title {
+          h5 {
+          }
+        }
+      }
+    }
+  }
+}
+
+/* Landscape phones and portrait tablets */
+@media screen and (max-width: 830px) {
+  #sources-menu {
+    .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
+      max-width: 600px;
+      .sources-menu_item {
+        &__ref {
+          a {
+          }
+        }
+        &__journal {
+        }
+        &__title {
+          h5 {
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 472px) and (max-width: 670px) {
+  #sources-menu {
+    .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
+      max-width: 300px;
+      .sources-menu_item {
+        &__ref {
+          a {
+          }
+        }
+        &__journal {
+        }
+        &__title {
+          h5 {
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 471px) {
+  #sources-menu {
+    .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
+      max-width: 200px;
+      .sources-menu_item {
+        &__ref {
+          a {
+          }
+        }
+        &__journal {
+        }
+        &__title {
+          h5 {
           }
         }
       }
