--- a/frontend/src/pages/GalleryPages/ExhibitPage/ExhibitPage.scss
+++ b/frontend/src/pages/GalleryPages/ExhibitPage/ExhibitPage.scss
@@ -84,7 +84,52 @@
   }
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1920px) {
+  .exhibit {
+    .mainContainer {
+      .leftContainer {
+        .imageContainer {
+          .image {
+
+          }
+        }
+        .content {
+          .exhibitTitle {
+            max-height: 90px;
+            h1 {
+              font-size: 30px;
+              line-height: 40px;
+            }
+          }
+          .subtitle {
+            h4 {
+              font-size: 28px;
+              line-height: 28px;
+              color: #B9B9B9;
+              font-family: RSLight, serif;
+            }
+          }
+          p {
+            font-size: 24px;
+            line-height: 30px;
+          }
+          .sourcesContainer {
+            h5 {
+              font-size: 30px;
+              line-height: 34px;
+            }
+            .sources {
+              font-size: 26px;
+              line-height: 26px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1300px) and (max-width: 1919px) {
   .exhibit {
     .mainContainer {
       .leftContainer {
@@ -113,7 +158,7 @@
 }
 
 /* Portrait tablets and medium desktops */
-@media (min-width: 992px) and (max-width: 1199px) {
+@media screen and (min-width: 992px) and (max-width: 1199px) {
   .exhibit {
     .mainContainer {
       .leftContainer {
