--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -11,6 +11,8 @@
 @import "../pages/GalleryPages/ExhibitListPage/ExhibitListPage";
 @import "../pages/GalleryPages/ExhibitPage/ExhibitPage";
 @import "../pages/VideoPage/VideoPage";
+@import "../pages/ReliefPages/ReliefPage/ReliefPage";
+
 // COMPONENTS
 @import "../components/EarthTypeMenu/EarthTypeMenu.scss";
 
