--- a/frontend/src/components/CardPreview/CardPreview.scss
+++ b/frontend/src/components/CardPreview/CardPreview.scss
@@ -11,7 +11,8 @@
         color: $orange;
     }
     .photo {
-        height: 210px;
+        height: 85%;
+        width: 100%;
     }
     .title {
         white-space: nowrap;
