--- a/frontend/src/pages/GalleryPages/ExhibitPage/ExhibitPage.scss
+++ b/frontend/src/pages/GalleryPages/ExhibitPage/ExhibitPage.scss
@@ -9,72 +9,80 @@
     padding-bottom: 20px;
 
     .leftContainer {
+      min-width: 70vw;
       overflow-y: auto;
       padding-right: 5px;
+
       .imageContainer {
         float: left;
         padding-right: 25px;
+
         .image {
           width: 391px;
           height: 363px;
         }
       }
-    }
 
-    .content {
 
-      .exhibitTitle {
-        max-height: 60px;
-        word-break: break-word;
-        overflow-y: auto;
-        margin-bottom: 20px;
+      .content {
 
-        h1 {
-          text-transform: uppercase;
-          font-size: 24px;
-          line-height: 32px;
-          font-family: RSRegular, serif;
+        .exhibitTitle {
+          max-height: 60px;
+          word-break: break-word;
+          overflow-y: auto;
+          margin-bottom: 20px;
+
+          h1 {
+            text-transform: uppercase;
+            font-size: 24px;
+            line-height: 32px;
+            font-family: RSRegular, serif;
+          }
         }
-      }
 
-      .subtitle {
-        padding-bottom: 20px;
-        h4 {
-          text-transform: uppercase;
-          font-size: 16px;
-          line-height: 16px;
+        .subtitle {
+          padding-bottom: 20px;
+
+          h4 {
+            text-transform: uppercase;
+            font-size: 16px;
+            line-height: 16px;
+            color: #B9B9B9;
+            font-family: RSLight, serif;
+          }
+        }
+
+        p {
           color: #B9B9B9;
-          font-family: RSLight, serif;
-        }
-      }
-      p {
-        color: #B9B9B9;
-        font-size: 14px;
-        line-height: 20px;
-        word-break: break-word;
-        white-space: normal;
-        //overflow: auto; // ломает float
-      }
-      .sourcesContainer {
-        display: flex;
-        flex-direction: row;
-        align-items: baseline;
-        gap: 20px;
-        h5 {
           font-size: 14px;
           line-height: 20px;
-          text-transform: none;
-          font-family: RSLight, serif;
-          color: #B9B9B9;
+          word-break: break-word;
+          white-space: normal;
+          //overflow: auto; // ломает float
         }
 
-        .sources {
-          font-size: 14px;
-          line-height: 14px;
-          text-transform: none;
-          white-space: normal;
-          font-family: RSLight, serif;
-          color: #B9B9B9;
+        .sourcesContainer {
+          display: flex;
+          flex-direction: row;
+          align-items: baseline;
+          gap: 20px;
+
+          h5 {
+            font-size: 14px;
+            line-height: 20px;
+            text-transform: none;
+            font-family: RSLight, serif;
+            color: #B9B9B9;
+          }
+
+          .sources {
+            font-size: 14px;
+            line-height: 14px;
+            text-transform: none;
+            white-space: normal;
+            font-family: RSLight, serif;
+            color: #B9B9B9;
+          }
         }
       }
     }
@@ -203,15 +211,16 @@
         float: none;
         .imageContainer {
           display: flex;
-          justify-content: center;
+          justify-content: left;
           .image {
             width: 350px;
             height: 350px;
           }
         }
         .content {
+
           .sourcesContainer {
-            justify-content: center;
+            justify-content: left;
           }
         }
       }
