tags in plain text are now converted to html in ArticlePage and ExhibitPage

--- a/frontend/src/components/ToolComponents/Article/ArticleSourcesMenu/ArticleSourcesMenu.scss
+++ b/frontend/src/components/ToolComponents/Article/ArticleSourcesMenu/ArticleSourcesMenu.scss
@@ -33,10 +33,14 @@
       flex-direction: row;
       align-items: flex-start;
       &__ref {
+        color: #B9B9B9;
+        font-size: small;
+        &:hover {
+          color: $orange;
+        }
         a {
           color: #B9B9B9;
           font-size: small;
-          text-decoration: underline;
           &:hover {
             color: $orange;
           }
@@ -49,6 +53,15 @@
         word-break: normal;
         &:hover {
           color: $orange;
+        }
+        a {
+          color: #B9B9B9;
+          font-size: small;
+          white-space: pre-wrap;
+          word-break: normal;
+          &:hover {
+            color: $orange;
+          }
         }
       }
       &__title {
