--- a/frontend/src/components/ToolComponents/VideoPlayer/VideoPlayer.scss
+++ b/frontend/src/components/ToolComponents/VideoPlayer/VideoPlayer.scss
@@ -32,11 +32,12 @@ html {
   flex-direction: column;
 }
 
+
 .video-container__controls {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   width: 35%;
 
 
@@ -47,8 +48,12 @@ html {
 
 }
 
+
+
+
 .video-container__controls > div {
-  padding: 10px;
+  padding: 100px;
+
   svg {
     cursor: pointer;
 
