--- a/frontend/src/components/CardPreview/CardPreview.scss
+++ b/frontend/src/components/CardPreview/CardPreview.scss
@@ -15,9 +15,11 @@
         width: 100%;
     }
     .title {
+        height: 15%;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
         padding: 10px 10px 25px;
+        font-size: 1.5em;
     }
 }
