--- a/frontend/src/components/ToolComponents/Article/ArticleSourcesMenu/ArticleSourcesMenu.scss
+++ b/frontend/src/components/ToolComponents/Article/ArticleSourcesMenu/ArticleSourcesMenu.scss
@@ -9,8 +9,8 @@
   width: auto !important;
   h5 {
     text-transform: none;
-    line-height: 20px;
-    font-size: 14px;
+    font-size: 1.2em;
+    line-height: 1.6em;
     color: #B9B9B9;
   }
   &:hover {
@@ -31,7 +31,7 @@
     .sources-menu_item {
       display: flex;
       flex-direction: row;
-      align-items: flex-start;
+      align-items: baseline;
       &__ref {
         color: #B9B9B9;
         font-size: small;
@@ -86,27 +86,29 @@
 @media screen and (min-width: 1920px) {
   #sources-button {
     h5 {
-      font-size: 24px;
-      line-height: 28px;
+      font-size: 1.4em;
+      line-height: 1.6em;
     }
   }
   #sources-menu {
     .MuiList-root.MuiList-padding.MuiMenu-list.css-6hp17o-MuiList-root-MuiMenu-list {
       .sources-menu_item {
         &__ref {
+          font-size: 1.2em;
+          line-height: 1.4em;
           a {
-            font-size: 20px;
-            line-height: 26px;
+            font-size: 1.2em;
+            line-height: 1.4em;
           }
         }
         &__journal {
-          font-size: 20px;
-          line-height: 26px;
+          font-size: 1.2em;
+          line-height: 1.4em;
         }
         &__title {
           h5 {
-            font-size: 20px;
-            line-height: 26px;
+            font-size: 1.2em;
+            line-height: 1.4em;
           }
         }
       }
@@ -239,14 +241,16 @@
       max-width: 75vw;
       .sources-menu_item {
         &__ref {
+          font-size: 1.2em;
+          line-height: 1.6em;
           a {
-            font-size: 16px;
-            line-height: 20px;
+            font-size: 1.2em;
+            line-height: 1.6em;
           }
         }
         &__journal {
-          font-size: 10px;
-          line-height: 16px;
+          font-size: 1em;
+          line-height: 1.2em;
         }
         &__title {
           h5 {
