--- a/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
+++ b/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
@@ -16,8 +16,8 @@
         min-width: 70vw;
         .subtitle {
             h4 {
-                font-size: 16px;
-                line-height: 16px;
+                font-size: 1.8em;
+                line-height: 1.8em;
                 color: #B9B9B9;
                 font-family: RSLight, serif;
             }
@@ -25,8 +25,8 @@
 
         .title {
             h1 {
-                font-size: 24px;
-                line-height: 32px;
+                font-size: 2em;
+                line-height: 1.2em;
                 padding-top: 17px;
                 font-family: RSRegular, serif;
             }
@@ -47,8 +47,8 @@
                 color: #B9B9B9;
                 white-space: normal;
                 word-break: break-word;
-                font-size: 14px;
-                line-height: 20px;
+                font-size: 1.2em;
+                line-height: 1.6em;
             }
         }
     }
