--- a/frontend/src/pages/GalleryPages/ExhibitPage/ExhibitPage.scss
+++ b/frontend/src/pages/GalleryPages/ExhibitPage/ExhibitPage.scss
@@ -1,7 +1,7 @@
 .exhibit {
   color: $white;
   .mainContainer {
-    height: 75vh;
+    height: 85vh;
     display: flex;
     flex-direction: row;
     gap: 20px;
@@ -34,8 +34,8 @@
 
           h1 {
             text-transform: uppercase;
-            font-size: 24px;
-            line-height: 32px;
+            font-size: 2em;
+            line-height: 1.2em;
             font-family: RSRegular, serif;
           }
         }
@@ -45,8 +45,8 @@
 
           h4 {
             text-transform: uppercase;
-            font-size: 16px;
-            line-height: 16px;
+            font-size: 1.8em;
+            line-height: 1.8em;
             color: #B9B9B9;
             font-family: RSLight, serif;
           }
@@ -54,8 +54,8 @@
 
         p {
           color: #B9B9B9;
-          font-size: 14px;
-          line-height: 20px;
+          font-size: 1.2em;
+          line-height: 1.6em;
           word-break: break-word;
           white-space: normal;
           //overflow: auto; // ломает float
@@ -68,16 +68,16 @@
           gap: 20px;
 
           h5 {
-            font-size: 14px;
-            line-height: 20px;
+            font-size: 1.4em;
+            line-height: 1.6em;
             text-transform: none;
             font-family: RSLight, serif;
             color: #B9B9B9;
           }
 
           .sources {
-            font-size: 14px;
-            line-height: 14px;
+            font-size: 1.2em;
+            line-height: 1.2em;
             text-transform: none;
             white-space: normal;
             font-family: RSLight, serif;
