--- a/frontend/src/components/CardPreview/CardPreview.scss
+++ b/frontend/src/components/CardPreview/CardPreview.scss
@@ -11,11 +11,11 @@
         color: $orange;
     }
     .photo {
-        height: 85%;
+        min-height: 85%;
         width: 100%;
     }
     .title {
-        height: 15%;
+        min-height: 15%;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
