--- a/frontend/src/components/EarthTypeMenu/EarthTypeMenu.scss
+++ b/frontend/src/components/EarthTypeMenu/EarthTypeMenu.scss
@@ -17,7 +17,7 @@
 
 .earth-time-dropdown__content {
     position: absolute;
-    background-color: $black;
+    background-color: transparent;
     min-width: 250px;
     z-index: 1;
     display: none;
@@ -31,7 +31,7 @@
 }
 
 .earth-time-dropdown__content li {
-    padding-top: 12px;
+    padding-top: 8px;
     padding-left: 24px;
 }
 
