--- a/frontend/src/components/Layout/Layout.scss
+++ b/frontend/src/components/Layout/Layout.scss
@@ -9,6 +9,7 @@
 }
 
 header {
+  z-index: 100;
 }
 
 main {
@@ -17,6 +18,7 @@ main {
 }
 
 footer {
+  z-index: 100;
   .footer-default {
     width: 100%;
   }
