--- a/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
+++ b/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
@@ -7,6 +7,7 @@
     flex-direction: row;
     gap: 20px;
     max-height: 75vh;
+    justify-content: space-between;
 
     .leftContainer {
         display: flex;
