--- a/frontend/src/pages/ReconstructionPages/ReconstructionPage/ReconstructionPage.scss
+++ b/frontend/src/pages/ReconstructionPages/ReconstructionPage/ReconstructionPage.scss
@@ -1,7 +1,7 @@
 .reconstruction {
   color: $white;
   .mainContainer {
-    height: 75vh;
+    max-height: 75vh;
     display: flex;
     flex-direction: row;
     gap: 20px;
@@ -187,6 +187,7 @@
 @media screen and (max-width: 830px) {
   .reconstruction {
     .mainContainer {
+      max-height: none;
       height: inherit;
       flex-direction: column;
       padding-right: 5px;
